Restore sprite art and upscale boss encounters